src/iocc/tests/ui/fail/inject-attribute-no-occurrence.rs
use iocc::prelude::*;

struct Test;

#[component]
impl Test {}

fn main() {}
